--- a/aClient/templates/index.html
+++ b/aClient/templates/index.html
@@ -26,8 +26,17 @@
                     <source src="/static/samplevideo.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
+                <!-- Control panel for the screen view -->
+                <div class="control-panel">
+                    <button id="screen-start-interaction" title="Start Interaction"><i class="fas fa-play"></i></button>
+                    <button id="screen-start-recording" disabled title="Start Recording"><i
+                            class="fas fa-microphone"></i></button>
+                    <button id="screen-stop-recording" disabled title="Stop Recording"><i class="fas fa-stop"></i>
+                    </button>
+                </div>
             </div>
         </div>
+
     </div>
     <div class="tablet-home-button"></div>
 </div>
