hundle update on video oplay

--- a/aClient/templates/index.html
+++ b/aClient/templates/index.html
@@ -28,10 +28,9 @@
                 </video>
                 <!-- Control panel for the screen view -->
                 <div class="control-panel">
-                    <button id="screen-start-interaction" title="Start Interaction"><i class="fas fa-play"></i></button>
-                    <button id="screen-start-recording" disabled title="Start Recording"><i
-                            class="fas fa-microphone"></i></button>
-                    <button id="screen-stop-recording" disabled title="Stop Recording"><i class="fas fa-stop"></i>
+                    <button id="start-interaction" title="Start Interaction"><i class="fas fa-play"></i></button>
+                    <button id="start-recording" disabled title="Start Recording"><i class="fas fa-microphone"></i></button>
+                    <button id="stop-recording" disabled title="Stop Recording"><i class="fas fa-stop"></i>
                     </button>
                 </div>
             </div>
